# Order-Book-Engine-in-Cpp

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: desgin.md  requirements.md
include/: IOrder.hpp  IOrderObserver.hpp  LimitOrder.hpp  MatchingEngine.h  MatchingEngine.hpp  Order.hpp  OrderBook.hpp  OrderEventType.hpp  OrderFactory.hpp  Trade.hpp  transaction.hpp
include/Events/: AddOrderEvent.hpp  RemoveOrderEvent.hpp  TradeEvent.hpp
include/Interfaces/: IEvent.hpp  IOrderObserver.hpp
include/Observer/: TradeLog.hpp
src/: AddOrderEvent.cpp  LimitOrder.cpp  MatchEngine.cpp  MatchingEngine.cpp  OrderBook.cpp  OrderFactory.cpp  RemoveOrderEvent.cpp  Trade.cpp  TradeLog.cpp  main.cpp  transaction.cpp
test/: test_main.cpp  test_match_engine.cpp  test_order.cpp  test_order_factory.cpp  test_orderbook.cpp  test_tradelog.cpp
